Ecriture de la partie 2 et 3, Netoyage du dossier

--- a/rapport.ipynb
+++ b/rapport.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -207,13 +207,50 @@
        "4           43 Hill St, Atlanta, GA 30301  "
       ]
      },
-     "execution_count": 134,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pd.read_csv('all_data.csv').head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('all_data.csv').head()\n",
+    "df.rename(columns={\n",
+    "                  'Order ID': 'Numéro de commande',\n",
+    "                  'Product': 'Produit',\n",
+    "                  'Quantity Ordered': 'Quantité',\n",
+    "                  'Price Each': 'Prix', \n",
+    "                  'Order Date': 'Date',\n",
+    "                   'Purchase Address': 'Adresse'\n",
+    "                 }, inplace=True)\n",
+    "df.to_csv('raw_data.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "README.md         \u001b[1m\u001b[36massets\u001b[m\u001b[m/           \u001b[31mdeployement\u001b[m\u001b[m*      rapport.ipynb\r\n",
+      "all_data.csv      city_info.csv     eda.ipynb         raw_data.csv\r\n",
+      "app.py            clean_data.csv    mapbox_token.txt\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls"
    ]
   },
   {
